--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "generator-react-sass-es2015",
-  "version": "0.2.0",
+  "name": "generator-react-party",
+  "version": "0.3.0",
   "description": "Generate a web app that uses React, Sass, Gulp, Browserify, and ES2015",
-  "homepage": "https://github.com/sgbj/generator-react-sass-es2015",
+  "homepage": "https://github.com/kevronosx/generator-react-party",
   "author": {
     "name": "sgbj",
     "email": "",
