--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "flux": "^2.1.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react": "15.0.2",
+    "react-addons-css-transition-group": "^15.0.2",
+    "react-dom": "15.0.2",
+    "react-router": "2.4.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
