--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "app",
+  "name": "webpackguide",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --hot --progress --colors",
+    "build": "webpack --progress --colors"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "strip-loader": "^0.1.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0"
+  },
   "dependencies": {
-    "flux": "^2.1.1",
     "react": "15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "15.0.2",
     "react-router": "2.4.0"
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^2.3.1",
-    "gulp-open": "^1.0.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-watch": "^4.3.5",
-    "vinyl-source-stream": "^1.1.0"
   }
 }
